# cppm

./: .gitignore
task10_1/: CMakeLists.txt  main.cpp
task10_2/: CMakeLists.txt  Figure.cpp  Figure.h  Quadrangle.h  Rhombus.h  Triangle.h
task11_1/: task11_1.sln
task11_2/: task11_2.sln
task11_3/: CMakeLists.txt  leaver_shared_client.cpp
task11_4/: task11_4.sln
task11_5/: CMakeLists.txt  EquilateralTriangle.h  Figure.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Rectangle.h  RectangularTriangle.cpp  Rhombus.h  Square.cpp  figure_cmake_client.cpp
task1_1/: task1_1.cpp  task1_1.sln  task1_1.vcxproj  task1_1.vcxproj.filters
task2_1/: task2_1.cpp  task2_1.sln  task2_1.vcxproj  task2_1.vcxproj.filters
task2_2/: task2_2.cpp  task2_2.sln  task2_2.vcxproj  task2_2.vcxproj.filters
task2_3/: task2_3.cpp  task2_3.sln  task2_3.vcxproj  task2_3.vcxproj.filters
task3_1/: task3_1.cpp  task3_1.sln  task3_1.vcxproj
task3_2/: task3_2.cpp  task3_2.sln  task3_2.vcxproj  task3_2.vcxproj.filters
task4_1/: task4_1.cpp  task4_1.sln  task4_1.vcxproj  task4_1.vcxproj.filters
task4_2/: out.txt  task4_2.cpp  task4_2.sln  task4_2.vcxproj  task4_2.vcxproj.filters
task5_1/: task5_1.cpp  task5_1.sln  task5_1.vcxproj  task5_1.vcxproj.filters
task5_2/: task5_2.cpp  task5_2.sln  task5_2.vcxproj  task5_2.vcxproj.filters
task5_3/: task5_3.cpp  task5_3.sln  task5_3.vcxproj  task5_3.vcxproj.filters
task6_1/: math_funcs.cpp  math_funcs.h  task6_1.cpp  task6_1.sln  task6_1.vcxproj  task6_1.vcxproj.filters
task6_2/: Counter.cpp  Counter.h  task6_2.cpp  task6_2.sln  (+2 more)
(+62 files in other folders)
